istio-ingress/istio-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hello-openshift
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-openshift
  namespace: hello-openshift
  labels:
    app: hello-openshift
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.apps.example.com"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-openshift
  namespace: hello-openshift
  labels:
    app: hello-openshift
spec:
  gateways:
  - istio-system/hello-openshift
  hosts:
  - hello-openshift.apps.example.com
  http:
  - route:
    - destination:
        host: hello-openshift
        port:
          number: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: hello-openshift
  namespace: hello-openshift
  labels:
    app: hello-openshift
spec:
  ports:
    - name: http-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: hello-openshift
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-openshift
  namespace: hello-openshift
  labels:
    app: hello-openshift
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-openshift
  template:
    metadata:
      labels:
        app: hello-openshift
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: hello-openshift
          image: hello-openshift
          ports:
            - containerPort: 8080
              protocol: TCP
